packages/core/parser/RedshiftParser.ts
// Generated from ./parser/Redshift.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { RedshiftVisitor } from './RedshiftVisitor';


export class RedshiftParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly T__12=13;
	public static readonly T__13=14;
	public static readonly T__14=15;
	public static readonly T__15=16;
	public static readonly T__16=17;
	public static readonly T__17=18;
	public static readonly T__18=19;
	public static readonly T__19=20;
	public static readonly T__20=21;
	public static readonly T__21=22;
	public static readonly T__22=23;
	public static readonly T__23=24;
	public static readonly T__24=25;
	public static readonly T__25=26;
	public static readonly T__26=27;
	public static readonly T__27=28;
	public static readonly NUMBER=29;
	public static readonly STRING=30;
	public static readonly BOOLEAN=31;
	public static readonly IDENTIFIER=32;
	public static readonly WS=33;
	public static readonly NEWLINE=34;
	public static readonly RULE_program = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_block = 2;
	public static readonly RULE_expression = 3;
	public static readonly RULE_constDeclaration = 4;
	public static readonly RULE_funcDeclaration = 5;
	public static readonly RULE_lambda = 6;
	public static readonly RULE_lambdaCall = 7;
	public static readonly RULE_funcCall = 8;
	public static readonly RULE_funcParams = 9;
	public static readonly RULE_memberExpression = 10;
	public static readonly RULE_list = 11;
	public static readonly RULE_record = 12;
	public static readonly RULE_keyValue = 13;
	public static readonly RULE_importStatement = 14;
	public static readonly ruleNames: string[] = [
		"program", "statement", "block", "expression", "constDeclaration", "funcDeclaration", 
		"lambda", "lambdaCall", "funcCall", "funcParams", "memberExpression", 
		"list", "record", "keyValue", "importStatement"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'==='", "'>'", "'<'", "'<='", "'>='", "'*'", "'/'", "'+'", 
		"'-'", "'<>'", "'++'", "'let'", "':'", "'='", "'def'", "'do'", "'end'", 
		"'('", "')'", "'->'", "'.'", "','", "'['", "']'", "'{'", "'}'", "'import'", 
		"'as'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, "NUMBER", "STRING", "BOOLEAN", "IDENTIFIER", "WS", "NEWLINE"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(RedshiftParser._LITERAL_NAMES, RedshiftParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return RedshiftParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "Redshift.g4"; }

	@Override
	public get ruleNames(): string[] { return RedshiftParser.ruleNames; }

	@Override
	public get serializedATN(): string { return RedshiftParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(RedshiftParser._ATN, this);
	}
	@RuleVersion(0)
	public program(): ProgramContext {
		let _localctx: ProgramContext = new ProgramContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, RedshiftParser.RULE_program);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 33;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 12)) & ~0x1F) === 0 && ((1 << (_la - 12)) & ((1 << (RedshiftParser.T__11 - 12)) | (1 << (RedshiftParser.T__14 - 12)) | (1 << (RedshiftParser.T__17 - 12)) | (1 << (RedshiftParser.T__22 - 12)) | (1 << (RedshiftParser.T__24 - 12)) | (1 << (RedshiftParser.T__26 - 12)) | (1 << (RedshiftParser.NUMBER - 12)) | (1 << (RedshiftParser.STRING - 12)) | (1 << (RedshiftParser.BOOLEAN - 12)) | (1 << (RedshiftParser.IDENTIFIER - 12)))) !== 0)) {
				{
				{
				this.state = 30;
				this.statement();
				}
				}
				this.state = 35;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 36;
			this.match(RedshiftParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, RedshiftParser.RULE_statement);
		try {
			this.state = 42;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case RedshiftParser.T__17:
			case RedshiftParser.T__22:
			case RedshiftParser.T__24:
			case RedshiftParser.NUMBER:
			case RedshiftParser.STRING:
			case RedshiftParser.BOOLEAN:
			case RedshiftParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 38;
				this.expression(0);
				}
				break;
			case RedshiftParser.T__11:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 39;
				this.constDeclaration();
				}
				break;
			case RedshiftParser.T__14:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 40;
				this.funcDeclaration();
				}
				break;
			case RedshiftParser.T__26:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 41;
				this.importStatement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, RedshiftParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 46; 
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			do {
				{
				this.state = 46;
				this._errHandler.sync(this);
				switch (this._input.LA(1)) {
				case RedshiftParser.T__11:
					{
					this.state = 44;
					this.constDeclaration();
					}
					break;
				case RedshiftParser.T__17:
				case RedshiftParser.T__22:
				case RedshiftParser.T__24:
				case RedshiftParser.NUMBER:
				case RedshiftParser.STRING:
				case RedshiftParser.BOOLEAN:
				case RedshiftParser.IDENTIFIER:
					{
					this.state = 45;
					this.expression(0);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				this.state = 48; 
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			} while ( ((((_la - 12)) & ~0x1F) === 0 && ((1 << (_la - 12)) & ((1 << (RedshiftParser.T__11 - 12)) | (1 << (RedshiftParser.T__17 - 12)) | (1 << (RedshiftParser.T__22 - 12)) | (1 << (RedshiftParser.T__24 - 12)) | (1 << (RedshiftParser.NUMBER - 12)) | (1 << (RedshiftParser.STRING - 12)) | (1 << (RedshiftParser.BOOLEAN - 12)) | (1 << (RedshiftParser.IDENTIFIER - 12)))) !== 0) );
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public expression(): ExpressionContext;
	public expression(_p: number): ExpressionContext;
	@RuleVersion(0)
	public expression(_p?: number): ExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: ExpressionContext = new ExpressionContext(this._ctx, _parentState);
		let _prevctx: ExpressionContext = _localctx;
		let _startState: number = 6;
		this.enterRecursionRule(_localctx, 6, RedshiftParser.RULE_expression, _p);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 61;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,4,this._ctx) ) {
			case 1:
				{
				_localctx = new FuncExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;

				this.state = 51;
				(_localctx as FuncExprContext)._func = this.funcCall();
				}
				break;

			case 2:
				{
				_localctx = new LambdaExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 52;
				(_localctx as LambdaExprContext)._lambdaD = this.lambda();
				}
				break;

			case 3:
				{
				_localctx = new LambdaExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 53;
				(_localctx as LambdaExprContext)._lambdaC = this.lambdaCall();
				}
				break;

			case 4:
				{
				_localctx = new MemberExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 54;
				(_localctx as MemberExprContext)._member = this.memberExpression(0);
				}
				break;

			case 5:
				{
				_localctx = new ListExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 55;
				(_localctx as ListExprContext)._atom = this.list();
				}
				break;

			case 6:
				{
				_localctx = new RecordExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 56;
				(_localctx as RecordExprContext)._atom = this.record();
				}
				break;

			case 7:
				{
				_localctx = new AtomExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 57;
				(_localctx as AtomExprContext)._atom = this.match(RedshiftParser.NUMBER);
				}
				break;

			case 8:
				{
				_localctx = new AtomExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 58;
				(_localctx as AtomExprContext)._atom = this.match(RedshiftParser.BOOLEAN);
				}
				break;

			case 9:
				{
				_localctx = new AtomExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 59;
				(_localctx as AtomExprContext)._atom = this.match(RedshiftParser.IDENTIFIER);
				}
				break;

			case 10:
				{
				_localctx = new AtomExprContext(_localctx);
				this._ctx = _localctx;
				_prevctx = _localctx;
				this.state = 60;
				(_localctx as AtomExprContext)._atom = this.match(RedshiftParser.STRING);
				}
				break;
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 77;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,6,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					if ( this._parseListeners!=null ) this.triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					this.state = 75;
					this._errHandler.sync(this);
					switch ( this.interpreter.adaptivePredict(this._input,5,this._ctx) ) {
					case 1:
						{
						_localctx = new LogicExpressionContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as LogicExpressionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, RedshiftParser.RULE_expression);
						this.state = 63;
						if (!(this.precpred(this._ctx, 14))) throw new FailedPredicateException(this, "this.precpred(this._ctx, 14)");
						this.state = 64;
						(_localctx as LogicExpressionContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if ( !((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << RedshiftParser.T__0) | (1 << RedshiftParser.T__1) | (1 << RedshiftParser.T__2) | (1 << RedshiftParser.T__3) | (1 << RedshiftParser.T__4))) !== 0)) ) {
							(_localctx as LogicExpressionContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 65;
						(_localctx as LogicExpressionContext)._right = this.expression(15);
						}
						break;

					case 2:
						{
						_localctx = new BinaryExpressionContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as BinaryExpressionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, RedshiftParser.RULE_expression);
						this.state = 66;
						if (!(this.precpred(this._ctx, 13))) throw new FailedPredicateException(this, "this.precpred(this._ctx, 13)");
						this.state = 67;
						(_localctx as BinaryExpressionContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if ( !(_la===RedshiftParser.T__5 || _la===RedshiftParser.T__6) ) {
							(_localctx as BinaryExpressionContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 68;
						(_localctx as BinaryExpressionContext)._right = this.expression(14);
						}
						break;

					case 3:
						{
						_localctx = new BinaryExpressionContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as BinaryExpressionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, RedshiftParser.RULE_expression);
						this.state = 69;
						if (!(this.precpred(this._ctx, 12))) throw new FailedPredicateException(this, "this.precpred(this._ctx, 12)");
						this.state = 70;
						(_localctx as BinaryExpressionContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if ( !(_la===RedshiftParser.T__7 || _la===RedshiftParser.T__8) ) {
							(_localctx as BinaryExpressionContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 71;
						(_localctx as BinaryExpressionContext)._right = this.expression(13);
						}
						break;

					case 4:
						{
						_localctx = new BinaryExpressionContext(new ExpressionContext(_parentctx, _parentState));
						(_localctx as BinaryExpressionContext)._left = _prevctx;
						this.pushNewRecursionContext(_localctx, _startState, RedshiftParser.RULE_expression);
						this.state = 72;
						if (!(this.precpred(this._ctx, 11))) throw new FailedPredicateException(this, "this.precpred(this._ctx, 11)");
						this.state = 73;
						(_localctx as BinaryExpressionContext)._op = this._input.LT(1);
						_la = this._input.LA(1);
						if ( !(_la===RedshiftParser.T__9 || _la===RedshiftParser.T__10) ) {
							(_localctx as BinaryExpressionContext)._op = this._errHandler.recoverInline(this);
						} else {
							if (this._input.LA(1) === Token.EOF) {
								this.matchedEOF = true;
							}

							this._errHandler.reportMatch(this);
							this.consume();
						}
						this.state = 74;
						(_localctx as BinaryExpressionContext)._right = this.expression(12);
						}
						break;
					}
					} 
				}
				this.state = 79;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,6,this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
	@RuleVersion(0)
	public constDeclaration(): ConstDeclarationContext {
		let _localctx: ConstDeclarationContext = new ConstDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, RedshiftParser.RULE_constDeclaration);
		try {
			this.state = 90;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,7,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 80;
				this.match(RedshiftParser.T__11);
				this.state = 81;
				_localctx._name = this.match(RedshiftParser.IDENTIFIER);
				this.state = 82;
				this.match(RedshiftParser.T__12);
				this.state = 83;
				_localctx._type = this.match(RedshiftParser.IDENTIFIER);
				this.state = 84;
				this.match(RedshiftParser.T__13);
				this.state = 85;
				this.expression(0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 86;
				this.match(RedshiftParser.T__11);
				this.state = 87;
				_localctx._name = this.match(RedshiftParser.IDENTIFIER);
				this.state = 88;
				this.match(RedshiftParser.T__13);
				this.state = 89;
				this.expression(0);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public funcDeclaration(): FuncDeclarationContext {
		let _localctx: FuncDeclarationContext = new FuncDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, RedshiftParser.RULE_funcDeclaration);
		let _la: number;
		try {
			this.state = 109;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,9,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 92;
				this.match(RedshiftParser.T__14);
				this.state = 93;
				_localctx._name = this.match(RedshiftParser.IDENTIFIER);
				this.state = 94;
				this.match(RedshiftParser.T__15);
				this.state = 95;
				this.block();
				this.state = 96;
				this.match(RedshiftParser.T__16);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 98;
				this.match(RedshiftParser.T__14);
				this.state = 99;
				_localctx._name = this.match(RedshiftParser.IDENTIFIER);
				this.state = 100;
				this.match(RedshiftParser.T__17);
				this.state = 102;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===RedshiftParser.IDENTIFIER) {
					{
					this.state = 101;
					this.funcParams(0);
					}
				}

				this.state = 104;
				this.match(RedshiftParser.T__18);
				this.state = 105;
				this.match(RedshiftParser.T__15);
				this.state = 106;
				this.block();
				this.state = 107;
				this.match(RedshiftParser.T__16);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public lambda(): LambdaContext {
		let _localctx: LambdaContext = new LambdaContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, RedshiftParser.RULE_lambda);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 111;
			this.match(RedshiftParser.T__17);
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===RedshiftParser.IDENTIFIER) {
				{
				this.state = 112;
				this.funcParams(0);
				}
			}

			this.state = 115;
			this.match(RedshiftParser.T__18);
			this.state = 116;
			this.match(RedshiftParser.T__19);
			this.state = 117;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public lambdaCall(): LambdaCallContext {
		let _localctx: LambdaCallContext = new LambdaCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, RedshiftParser.RULE_lambdaCall);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 119;
			_localctx._name = this.match(RedshiftParser.IDENTIFIER);
			this.state = 120;
			this.match(RedshiftParser.T__20);
			this.state = 121;
			this.match(RedshiftParser.T__17);
			this.state = 128;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 18)) & ~0x1F) === 0 && ((1 << (_la - 18)) & ((1 << (RedshiftParser.T__17 - 18)) | (1 << (RedshiftParser.T__22 - 18)) | (1 << (RedshiftParser.T__24 - 18)) | (1 << (RedshiftParser.NUMBER - 18)) | (1 << (RedshiftParser.STRING - 18)) | (1 << (RedshiftParser.BOOLEAN - 18)) | (1 << (RedshiftParser.IDENTIFIER - 18)))) !== 0)) {
				{
				{
				this.state = 122;
				this.expression(0);
				this.state = 124;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===RedshiftParser.T__21) {
					{
					this.state = 123;
					this.match(RedshiftParser.T__21);
					}
				}

				}
				}
				this.state = 130;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 131;
			this.match(RedshiftParser.T__18);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public funcCall(): FuncCallContext {
		let _localctx: FuncCallContext = new FuncCallContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, RedshiftParser.RULE_funcCall);
		let _la: number;
		try {
			this.state = 158;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,17,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 133;
				_localctx._name = this.match(RedshiftParser.IDENTIFIER);
				this.state = 134;
				this.match(RedshiftParser.T__17);
				this.state = 141;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 18)) & ~0x1F) === 0 && ((1 << (_la - 18)) & ((1 << (RedshiftParser.T__17 - 18)) | (1 << (RedshiftParser.T__22 - 18)) | (1 << (RedshiftParser.T__24 - 18)) | (1 << (RedshiftParser.NUMBER - 18)) | (1 << (RedshiftParser.STRING - 18)) | (1 << (RedshiftParser.BOOLEAN - 18)) | (1 << (RedshiftParser.IDENTIFIER - 18)))) !== 0)) {
					{
					{
					this.state = 135;
					this.expression(0);
					this.state = 137;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===RedshiftParser.T__21) {
						{
						this.state = 136;
						this.match(RedshiftParser.T__21);
						}
					}

					}
					}
					this.state = 143;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 144;
				this.match(RedshiftParser.T__18);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 145;
				_localctx._member = this.memberExpression(0);
				this.state = 146;
				this.match(RedshiftParser.T__17);
				this.state = 153;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (((((_la - 18)) & ~0x1F) === 0 && ((1 << (_la - 18)) & ((1 << (RedshiftParser.T__17 - 18)) | (1 << (RedshiftParser.T__22 - 18)) | (1 << (RedshiftParser.T__24 - 18)) | (1 << (RedshiftParser.NUMBER - 18)) | (1 << (RedshiftParser.STRING - 18)) | (1 << (RedshiftParser.BOOLEAN - 18)) | (1 << (RedshiftParser.IDENTIFIER - 18)))) !== 0)) {
					{
					{
					this.state = 147;
					this.expression(0);
					this.state = 149;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (_la===RedshiftParser.T__21) {
						{
						this.state = 148;
						this.match(RedshiftParser.T__21);
						}
					}

					}
					}
					this.state = 155;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 156;
				this.match(RedshiftParser.T__18);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public funcParams(): FuncParamsContext;
	public funcParams(_p: number): FuncParamsContext;
	@RuleVersion(0)
	public funcParams(_p?: number): FuncParamsContext {
		if (_p === undefined) {
			_p = 0;
		}

		let _parentctx: ParserRuleContext = this._ctx;
		let _parentState: number = this.state;
		let _localctx: FuncParamsContext = new FuncParamsContext(this._ctx, _parentState);
		let _prevctx: FuncParamsContext = _localctx;
		let _startState: number = 18;
		this.enterRecursionRule(_localctx, 18, RedshiftParser.RULE_funcParams, _p);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			{
			this.state = 161;
			_localctx._id = this.match(RedshiftParser.IDENTIFIER);
			}
			this._ctx._stop = this._input.tryLT(-1);
			this.state = 168;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input,18,this._ctx);
			while ( _alt!==2 && _alt!==ATN.INVALID_ALT_NUMBER ) {
				if ( _alt===1 ) {
					if ( this._parseListeners!=null ) this.triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new FuncParamsContext(_parentctx, _parentState);
					this.pushNewRecursionContext(_localctx, _startState, RedshiftParser.RULE_funcParams);
					this.state = 163;
					if (!(this.precpred(this._ctx, 1))) throw new FailedPredicateException(this, "this.precpred(this._ctx, 1)");
					this.state = 164;
					this.match(RedshiftParser.T__21);
					this.state = 165;
					_localctx._id = this.match(RedshiftParser.IDENTIFIER);
					}
					} 
				}
				this.state = 170;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input,18,this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public memberExpression(): MemberExpressionContext;
	public memberExpression(_p: number): MemberExpressionContext;
	@RuleVersion(0)
	public memberExpression(_p?: number): MemberExpressionContext {
		if (_p === undefined) {
			_p = 0;
		}
